Feat: Update colors & refactor